# TrafficSignDetection

./: .gitignore  CMakeLists.txt  README.md  prepare_data.py  prepare_out.txt  train_cascades.py
data/: negative_samples.txt  positive_samples.txt  prepare_data.py  signs_default.vec
data/cascades_05-10/: stage0.xml  stage1.xml
data/cascades_06-10/: params.xml  stage0.xml  stage1.xml  stage2.xml
data/cascades_default/: cascade.xml  stage2.xml  stage3.xml  stage4.xml
data/dataset/: negative_samples.txt  positive_samples_100_SIGN.txt  positive_samples_50_SIGN.txt  positive_samples_70_SIGN.txt  positive_samples_80_SIGN.txt  positive_samples_GIVE_WAY.txt  positive_samples_NO_PARKING.txt  positive_samples_PASS_RIGHT_SIDE.txt  positive_samples_PEDESTRIAN_CROSSING.txt  positive_samples_PRIORITY_ROAD.txt  vec_100_SIGN_real.vec  vec_100_SIGN_template.vec  vec_110_SIGN_template.vec  vec_120_SIGN_template.vec  vec_30_SIGN_template.vec  vec_50_SIGN_real.vec  vec_50_SIGN_template.vec  vec_60_SIGN_template.vec  vec_70_SIGN_real.vec  vec_70_SIGN_template.vec  vec_80_SIGN_real.vec  vec_80_SIGN_template.vec  vec_90_SIGN_template.vec  vec_ALLSIGNS_visible.vec  vec_GIVE_WAY_real.vec  vec_GIVE_WAY_template.vec  vec_NO_PARKING_real.vec  vec_NO_PARKING_template.vec  vec_NO_STOPPING_NO_STANDING_template.vec  vec_PASS_EITHER_SIDE_template.vec  vec_PASS_LEFT_SIDE_template.vec  vec_PASS_RIGHT_SIDE_real.vec  vec_PASS_RIGHT_SIDE_template.vec  vec_PEDESTRIAN_CROSSING_real.vec  vec_PRIORITY_ROAD_real.vec  (+3 more)
src/: ShapeDetector.cpp  ShapeDetector.h  TrafficSignDetection.cpp  objectDetection.cpp
(+98 files in other folders)
